--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+      
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
@@ -25,27 +27,43 @@
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
+        
+          <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
 
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
+              <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                {% assign active = page.url | downcase | split: '/' %}
+                <ul class="navbar-nav nav-pills">
+                    <li><a href="{{ site.baseurl }}/" {% if active[1] == null %}class='nav-link active' {% else %} class="nav-link" {% endif %}>Home</a></li>
+                    <li><a href='{{ site.baseurl }}/music' {% if active[1] == 'music' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>Music</a></li>
+                    <li><a href='{{ site.baseurl }}/technology' {% if active[1] == 'technology' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>Technology</a></li>
+                    <li><a href='{{ site.baseurl }}/about' {% if active[1] == 'about' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>About</a></li>
+                </ul>
+              </div>
+            </nav>
         </header>
       </div>
     </div>
 
     <div id="main" role="main" class="container">
+        {{active[1]}}
       {{ content }}
     </div>
 
-    <div class="wrapper-footer">
+    <div class="wrapper-footer fixed-bottom">
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
       </div>
     </div>
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
-    {% include analytics.html %}
+  {% include analytics.html %}
   </body>
 </html>
