--- a/style.scss
+++ b/style.scss
@@ -295,6 +295,11 @@ nav {
   }
 }
 
+.embed-responsive {
+    padding-bottom: 15px;
+    overflow: hidden;
+}
+
 .wrapper-footer {
   width: 100%;
   margin-top: 50px;
