--- a/style.scss
+++ b/style.scss
@@ -300,6 +300,11 @@ nav {
     overflow: hidden;
 }
 
+.text-wrap-left {
+    float: left;
+    margin: 10px;
+}
+
 .wrapper-footer {
   width: 100%;
   margin-top: 50px;
