--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,13 +34,20 @@
               </button>
 
               <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-                {% assign active = page.url | downcase | split: '/' %}
-                <ul class="navbar-nav nav-pills">
-                    <li><a href="{{ site.baseurl }}/" {% if active[1] == null %}class='nav-link active' {% else %} class="nav-link" {% endif %}>Home</a></li>
-                    <li><a href='{{ site.baseurl }}/music' {% if active[1] == 'music' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>Music</a></li>
-                    <li><a href='{{ site.baseurl }}/technology' {% if active[1] == 'technology' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>Technology</a></li>
-                    <li><a href='{{ site.baseurl }}/about' {% if active[1] == 'about' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>About</a></li>
-                </ul>
+                    <ul id="results-container"></ul>
+                    {% assign active = page.url | downcase | split: '/' %}
+                    <ul class="navbar-nav nav-pills mr-auto">
+                        <li><a href="{{ site.baseurl }}/" {% if active[1] == null %}class='nav-link active' {% else %} class="nav-link" {% endif %}>Home</a></li>
+                        <li><a href='{{ site.baseurl }}/music' {% if active[1] == 'music' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>Music</a></li>
+                        <li><a href='{{ site.baseurl }}/technology' {% if active[1] == 'technology' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>Technology</a></li>
+                        <li><a href='{{ site.baseurl }}/about' {% if active[1] == 'about' %} class='nav-link active' {% else %} class="nav-link" {% endif %}>About</a></li>
+                    </ul>
+<!--
+                  <form class="form-inline mt-2 mt-md-0" action="{{ site.baseurl }}/search/" method="get">
+                        <input type="text" id="search-box" name="query" class="form-control mr-sm-2" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+-->
               </div>
             </nav>
         </header>
@@ -48,7 +55,6 @@
     </div>
     
     <div id="main" role="main" class="container">
-      {{active[1]}}
       {{ content }}
     </div>
 
@@ -62,9 +68,7 @@
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script> 
   {% include analytics.html %}
   </body>
 </html>
