--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ comments: true
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
+  <div>{% include post-tags.html %}</div>
 
   <div class="entry">
     {{ content }}
